--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ install:
  - nuget restore NHtmlUnit.sln
  - nuget install NUnit.Runners -Version 3.2.1 -OutputDirectory ./packages
 script:
+ - mkdir ./app/NHtmlUnit/obj/Release/ # Weird that this is required, but it is.
  - xbuild NHtmlUnit.sln /property:Configuration="Release" /verbosity:detailed
  - mono ./packages/NUnit.ConsoleRunner.3.2.1/tools/nunit3-console.exe ./tests/IntegrationTests/bin/Release/IntegrationTests.dll
