--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ install:
   - choco install gitversion.portable -pre -y
 
 before_build:
-  - nuget restore NHtmlUnit.sln -verbosity detailed
+  - nuget.exe restore NHtmlUnit.sln -verbosity detailed
   - ps: gitversion /l console /output buildserver
 
 build:
