--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,9 @@ after_build:
       Write-Host "nuget pack version $env:GitVersion_NuGetVersion"
       nuget.exe pack app/NHtmlUnit/NHtmlUnit.csproj -Verbosity detailed -Symbols -Properties Configuration=Release -Version $env:GitVersion_NuGetVersion
 
+artifacts:
+  - path: '**\*.nupkg'
+
 deploy:
 - provider: NuGet
   api_key:
